# Arch0

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: config.ts  http.ts  index.ts  output.ts  payload.ts  system.ts  types.ts
cli/src/commands/: config.ts  doctor.ts  insert.ts  setup.ts  status.ts
cli/tests/: config-command.test.ts  config.test.ts  doctor.test.ts  http.test.ts  insert.test.ts  payload.test.ts  setup.test.ts  status.test.ts
scripts/: install.sh
skills/arch0/: SKILL.md
src/arch0/: __init__.py  app.py  audit.py  config.py  decision_engine.py  models.py  recall.py  safety.py  storage.py  validation.py  vault_git.py
tests/: test_api.py  test_decision_engine.py  test_operation_models.py  test_safety.py  test_storage.py  test_v016_bootstrap.py  test_v017_docker_deployment.py  test_validation.py  test_vault_git.py
