[project]
name = "arch0"
version = "0.1.0"
description = "Local-first long-term archive agent for project memory"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2",
  "uvicorn>=0.20",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28",
  "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
